syntax = "proto3";
package wallet_api;
option go_package = "github.com/h-varmazyar/wallet/api/proto;walletApi";
import "api/proto/src/walletModels.proto";

service WalletService {
  rpc Create (WalletCreateReq) returns (Wallet);
  rpc Deposit (NewTransaction) returns (Wallet);
  rpc Withdrawal (NewTransaction) returns (Wallet);
  rpc ReturnByPhoneNumber (WalletReturnByPhoneReq) returns (Wallet);
}

message WalletCreateReq{
  string PhoneNumber = 1;
  // @inject_tag: json:"amount"
  int64 Amount = 2;
}

message NewTransaction{
  // @inject_tag: json:"wallet_id"
  string WalletID = 1;
  // @inject_tag: json:"amount"
  int64 Amount = 2;
  // @inject_tag: json:"ref_id"
  string RefID = 3;
  // @inject_tag: json:"description"
  string Description = 4;
}

message WalletReturnByPhoneReq{
    // @inject_tag: json:"phone_number"
    string PhoneNumber = 1;
}